<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".cricketer_profile_view">

    <AnalogClock
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/analog_clock_id"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sachin_tendulkar_id"
        android:text="@string/sachin_tendulkar_button"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/brain_lara_id"
        android:text="@string/brain_lara_button"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imran_khan_id"
        android:text="@string/imran_khan_button"
        android:textSize="15sp"
        android:textStyle="bold"/>





</LinearLayout>