<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <EditText
            android:id="@+id/edittxt1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
             android:layout_gravity="center"
            android:hint="@string/edit_text1"
            android:inputType="number"/>

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/edittxt2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:hint="@string/edit_text2"
            android:inputType="number"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_gravity="center">



    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textSize="20sp"/>


    <Button
        android:layout_marginLeft="10dp"
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:textSize="20sp"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">


    <Button
        android:layout_marginLeft="10dp"
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:textSize="20sp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">


        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:textSize="20sp"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nextPage_id"
                android:layout_gravity="center_horizontal"
                android:text="Date picker"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_picker_dialog"
                android:layout_gravity="center_horizontal"
                android:text="Date picker Dialog"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_picker_id"
                android:layout_gravity="center_horizontal"
                android:text="Time picker"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_picker_dialog_id"
                android:layout_gravity="center_horizontal"
                android:text="Time picker Dialog"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timeDatePickerDialog_id"
                android:layout_gravity="center_horizontal"
                android:text="Time/Date picker Dialog"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zoomControl_id"
                android:layout_gravity="center_horizontal"
                android:text="Zoom Control"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/videoView_id"
                android:layout_gravity="center_horizontal"
                android:text="Video View"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intent_View_id"
                android:layout_gravity="center_horizontal"
                android:text="Intent Data Pass"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intentProject_View_id"
                android:layout_gravity="center_horizontal"
                android:text="Intent Project"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intentDataPassingResult_id"
                android:layout_gravity="center_horizontal"
                android:text="Intent Result Activity"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>






        </LinearLayout>




    </ScrollView>



</LinearLayout>